# Surface-Visual

surface4/surface4/: CMakeLists.txt  README.md  surf1.txt  surf2.txt  surf3.txt  surf4.txt
surface4/surface4/viz3d/: .Makefile.swp  acp.cc  acp.h  intersect.h  linmath.h  object.cc  object.h  poly.cc  poly.h  polyhedron.C  polyhedron.h  ppoly.cc  ppoly.h  pv.h  surfaceintersect.h  viz3d.cc
